--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -41,7 +41,7 @@ header
       h1 Balance: &nbsp;$0.00
       strong.green Add Funds »
     .clear &nbsp;
-    .navbar.navbar-default role="navigation"
+    .navbar.navbar-default.capitalnavbar role="navigation"
       .navbar-header
         button.navbar-toggle data-target=".mainMenu" data-toggle="collapse" type="button"
           span.sr-only Toggle navigation
