--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,3 +1,4 @@
+/*External Font for the Site*/
 @font-face {
   font-family: 'droid_sansregular';
   src: url('/assets/droidsans-webfont.eot');
@@ -20,7 +21,8 @@ html, body {
 
 body {
   margin: 0;
-  padding: 0
+  padding: 0;
+  color: #555555;
 }
 
 body {
@@ -28,7 +30,7 @@ body {
   background: url(/assets/body-bg.jpg) no-repeat fixed 100% top #555555 !important;
   background-attachment: fixed !important;
   background-size: 100% !important;
-  background: url(/assets/body-bg.jpg) no-repeat fixed top center #555555 !important  \9;
+  background: url(/assets/body-bg.jpg) no-repeat fixed top center #555555 !important     \9;
   /*IE 9*/
   background: url(/assets/body-bg.jpg) no-repeat fixed top 100% #555555 /IE9 !important;
   background-attachment: fixed /IE9 !important;
@@ -44,27 +46,29 @@ h1, h2, h3, h4, h5, h6 {
   clear: both
 }
 
+.container {
+  padding: 0
+}
+
 /*Top Bar*/
 .topbarWraper {
   height: 55px;
-
 }
 
 .capital_top_nav {
-  height: auto
-}
+  height: auto;
+  a {
+    color: #FFFFFF !important;
+    font-size: 16px;
+    font-weight: bold;
+    height: 45px;
+    padding-right: 0 !important;
+    margin: 0;
 
-.capital_top_nav a {
-  color: #FFFFFF !important;
-  font-size: 16px;
-  font-weight: bold;
-  height: 45px;
-  padding-right: 0 !important;
-  margin: 0;
-}
-
-.capital_top_nav a img {
-  margin-right: 5px;
+    img {
+      margin-right: 5px;
+    }
+  }
 }
 
 .capitalcollapse {
@@ -78,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
   .navbar-header {
     background: #313131;
   }
+
   .navbar-collapse.in {
     overflow: visible
   }
@@ -89,22 +94,22 @@ h1, h2, h3, h4, h5, h6 {
 
 .capital-navbar-right {
   margin: -3px 5px 0 0 !important;
+  li {
+    padding: 0 0 0 10px
+  }
+
+  strong {
+    color: #0FEA6C;
+    font-size: 17px;
+    position: relative;
+    top: 13px;
+  }
+
 }
 
 .container > .navbar-header, .container > .navbar-collapse {
   margin-left: 0;
   margin-right: 0
-}
-
-.capital-navbar-right li {
-  padding: 0 0 0 10px
-}
-
-.capital-navbar-right strong {
-  color: #0FEA6C;
-  font-size: 17px;
-  position: relative;
-  top: 13px;
 }
 
 .green {
@@ -119,6 +124,14 @@ li.dropdown {
   height: 39px;
   margin: 8px 0 0 10px;
   padding: 7px 15px 5px;
+
+  a {
+    padding: 0;
+  }
+  ul {
+    width: 100%;
+    padding: 5px 0px 5px 7%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -126,45 +139,37 @@ li.dropdown {
   li.dropdown {
     margin: 20px 0 0 0;
   }
+
   .capitalcollapse {
     overflow: visible;
     background: #454545;
   }
 }
 
-li.dropdown a {
-  padding: 0;
-}
-
-li.dropdown ul {
-  width: 100%;
-  padding: 5px 0px 5px 7%;
-}
-
 /*Header*/
 header {
-  margin: 23px auto;
-}
+  margin: 23px auto 0;
 
-header h1.logo {
-  float: left;
-  margin: 0;
-  padding: 0
-}
+  h1.logo {
+    float: left;
+    margin: 0;
+    padding: 0
+  }
 
-header .balanceBlock {
-  background: none repeat scroll 0 0 #1A1A1A;
-  border-radius: 10px;
-  float: right;
-  min-height: 80px;
-  margin: 0;
-  padding: 12px 25px;
-}
+  .balanceBlock {
+    background: none repeat scroll 0 0 #1A1A1A;
+    border-radius: 10px;
+    float: right;
+    min-height: 80px;
+    margin: 0;
+    padding: 12px 25px;
 
-header .balanceBlock h1 {
-  color: #fff;
-  font-size: 28px;
-  margin: 0 0 10px 0;
+    h1 {
+      color: #fff;
+      font-size: 28px;
+      margin: 0 0 10px 0;
+    }
+  }
 }
 
 @media (max-width: 768px) {
@@ -172,10 +177,313 @@ header .balanceBlock h1 {
     float: none;
 
   }
+
   header .balanceBlock {
     float: none;
     margin: 20px 0;
 
+  }
+}
+
+/*Radio Button and Check Boxes*/
+.radio, .login {
+  font-family: 'droid_sansbold';
+  border-right: 1px solid #c4c4c4;
+  color: #555;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin: 35px 20px;
+  height: 30px;
+}
+
+@media (max-width: 768px) {
+  .radio, .login {
+    border: none;
+    text-align: center
+  }
+}
+
+label {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  padding-left: 25px;
+  margin-right: 15px;
+  font-size: 18px;
+}
+
+input[type=radio],
+input[type=checkbox] {
+  display: none;
+}
+
+label:before {
+  content: "";
+  display: inline-block;
+
+  width: 16px;
+  height: 16px;
+
+  margin: 0 0 4px 0px;
+  position: absolute;
+  left: 0;
+  bottom: 1px;
+  background-color: #aaa;
+  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+}
+
+.radio label:before {
+  border-radius: 8px;
+}
+
+.checkbox label {
+  margin-bottom: 10px;
+}
+
+.checkbox label:before {
+  border-radius: 3px;
+}
+
+input[type=radio]:checked + label:before {
+  content: "\2022";
+  color: #f3f3f3;
+  font-size: 27px;
+  text-align: center;
+  line-height: 14px;
+}
+
+input[type=checkbox]:checked + label:before {
+  content: "\2713";
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
+  font-size: 15px;
+  color: #f3f3f3;
+  text-align: center;
+  line-height: 15px;
+}
+
+input[type=text] {
+  border: 1px solid #ccc9c9;
+  color: #8e8e93;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+}
+
+/*Capital Content*/
+.capitalcontent {
+  background: #fff;
+  padding: 10px 20px
+}
+
+/*Category Nav*/
+.categoryNav {
+  background: none repeat scroll 0 0 #565656;
+  border-radius: 15px;
+  clear: both;
+  margin: 10px 0 20px;
+  min-height: 57px;
+  width: 100%;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    background: #565656;
+
+    li {
+      background: #565656;
+      float: left;
+      list-style: none;
+      padding: 15px 0px;
+
+      a {
+        font-family: 'droid_sansbold';
+        font-size: 18px;
+        color: #fff;
+        border-right: 1px solid #787878;
+        padding: 0 34px;
+        text-decoration: none
+      }
+
+      &:first-child {
+        border-radius: 15px 0 0 15px;
+        padding-left: 25px;
+      }
+
+      &:last-child {
+        border-radius: 0px 15px 15px 0;
+        padding-right: 25px;
+
+        a {
+          border-right: none;
+        }
+      }
+    }
+  }
+}
+
+
+@media (max-width: 768px) {
+  .categoryNav {
+    border-radius: none;
+  }
+
+  .categoryNav ul li {
+    float: none;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 0;
+  }
+
+  .categoryNav ul li a {
+    border: none;
+  }
+
+  .categoryNav ul li:first-child {
+    padding: 20px 0 10px 0
+  }
+}
+
+/*Welcome Note*/
+.welcomeNote {
+  text-align: center;
+  border: 2px solid #0fea6c;
+  padding: 20px;
+  font-size: 18px;
+}
+
+/*Login Section*/
+.loginSection {
+  background: #e9e9e9;
+  margin: 20px 0;
+}
+
+.loginSection .capital-navbar-right li {
+  padding: 0 0 0 5px !important;
+}
+
+.dropdownlogin {
+  background: none repeat scroll 0 0 #D3D3D3;
+  height: 35px;
+  margin: 0 47px 0 0;
+}
+
+.dropdownlogin a {
+  background: none;
+  text-decoration: none;
+  color: #555;
+  margin: -6px 0 0 0
+}
+
+.dropdownlogin .nav > li > a:hover, .dropdownlogin .nav > li > a:focus {
+  background: none !important
+}
+
+.dropdownlogin a:hover {
+  background: none;
+  text-decoration: none;
+}
+
+ul.loginJoin {
+  width: 100%;
+  margin: 13px 0 0 0;
+}
+
+ul.loginJoin li {
+  float: left;
+  list-style: none;
+  vertical-align: middle
+}
+
+div.button {
+  background: none repeat scroll 0 0 #555555;
+  color: #0FEA6C;
+  font-weight: bold;
+  margin: 0 0 0 5px;
+  min-width: 75px;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .dropdownlogin {
+    margin: 0 0px 0 20px
+  }
+}
+
+/*Contest List*/
+ul.contest, ul.contestHead {
+  width: 100%;
+  padding: 0;
+  margin: 10px auto;
+  border-top: 1px solid #bbbbbb;
+  clear: both
+}
+
+ul.contestHead li {
+  font-family: 'droid_sansbold';
+  float: left;
+  list-style: none;
+  font-size: 16px;
+  padding: 10px 20px;
+  text-align: left;
+}
+
+ul.contestHead li:nth-child(1), ul.contest li:nth-child(1) {
+  width: 10%;
+  font-weight: bold
+}
+
+ul.contestHead li:nth-child(2), ul.contest li:nth-child(2) {
+  width: 30%;
+  font-weight: bold
+}
+
+ul.contestHead li:nth-child(3), ul.contest li:nth-child(3) {
+  width: 12%
+}
+
+ul.contestHead li:nth-child(4), ul.contest li:nth-child(4) {
+  width: 13%
+}
+
+ul.contestHead li:nth-child(5), ul.contest li:nth-child(5) {
+  width: 13%
+}
+
+ul.contestHead li:nth-child(6), ul.contest li:nth-child(6) {
+  width: 12%
+}
+
+ul.contestHead li:nth-child(7), ul.contest li:nth-child(7) {
+  width: 10%
+}
+
+ul.contest li {
+  font-family: 'droid_sansregular';
+  float: left;
+  list-style: none;
+  padding: 10px 20px;
+  text-align: left;
+  color: #555555;
+  font-size: 18px;
+}
+
+a.button {
+  background: #555555;
+  color: #0FEA6C;
+  padding: 5px 10px;
+  font-weight: bold;
+  text-decoration: none
+}
+
+@media (max-width: 768px) {
+  ul.contestHead li {
+    float: none;
+  }
+
+  ul.contest li {
+    float: none
   }
 }
 
@@ -184,6 +492,7 @@ footer {
   background: none repeat scroll 0 0 #2C2B2B;
   padding: 30px 10px 45px;
   width: 100%;
+  margin: 25px 0 0 0;
 }
 
 div.footerContainer {
@@ -218,6 +527,7 @@ div.footerContainer ul.right li {
   div.footerContainer ul.left li {
     float: none;
   }
+
   div.footerContainer ul.right li {
     float: none;
   }
@@ -225,6 +535,12 @@ div.footerContainer ul.right li {
 
 .downarrow {
   background: url(/assets/dropdownarrow.png) no-repeat center center;
+  padding: 0 0 0 12px;
+  float: right;
+}
+
+.downarrowblack {
+  background: url(/assets/black.png) no-repeat center center;
   padding: 0 0 0 12px;
   float: right;
 }
