--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -11,7 +11,7 @@ html lang="en"
 
   body class= page_class id= page_id
     = render 'shared/header'
-    = yield
+    .container.capitalcontent= yield
     = render 'shared/footer'
     = javascript_include_tag "application"
 
