--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -417,7 +417,7 @@ ul.contest, ul.contestHead {
   padding: 0;
   margin: 10px auto;
   border-top: 1px solid #bbbbbb;
-  clear: both
+  clear: both;
 }
 
 ul.contestHead li {
@@ -467,6 +467,10 @@ ul.contest li {
   text-align: left;
   color: #555555;
   font-size: 18px;
+
+  img{
+    margin-right: 5px;
+  }
 }
 
 a.button {
@@ -541,6 +545,6 @@ div.footerContainer ul.right li {
 
 .downarrowblack {
   background: url(/assets/black.png) no-repeat center center;
-  padding: 0 0 0 12px;
+  padding: 0 0 0 10px;
   float: right;
 }
