--- a/app/views/contests/_contest.slim
+++ b/app/views/contests/_contest.slim
@@ -1,7 +1,7 @@
 ul.contest
   li 50/50
   li
-    = image_tag 'supports/nba.png'
+    = image_tag 'sports/nba.png'
     | NBA
   li 01:23:45
   li $1
