--- a/app/views/contests/index.slim
+++ b/app/views/contests/index.slim
@@ -48,5 +48,5 @@ ul.contestHead
   li PRIZE
   li ENTRIES
   li
--50.times do |i|
-  = render partial: 'contest'
+
+= render partial: 'contest', collection: @contests
