Fix spelling errors

--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,10 +1,10 @@
 .jumbotron.team.teamDraft
   .contestlive
-    strong> Contest Live In
+    strong Contest Live In
     | 06:55:48
   h1 Draft Your Team
   p
-    | Choose from the availabke players below, and submit your team.
+    | Choose from the available players below, and submit your team.
     br
     | You can edit your team at any time until the game starts.
   p
@@ -54,7 +54,6 @@ p.timingschedule
 
   .tab-content
     #QB.tab-pane.active
-      /! Dynamic Table for QB
       table.tab.lineup
         thead
           tr
