--- a/app/views/contests/_contest.slim
+++ b/app/views/contests/_contest.slim
@@ -1,10 +1,12 @@
-ul.contest id=dom_id(contest)
-  li= contest.contest_type
-  li
+tr.contest id=dom_id(contest)
+  td.contest-type= contest.contest_type
+  td.sport-name
     = image_tag "sports/#{contest.sport.downcase}.png"
     = contest.sport
-  li= contest_remaining_time contest
-  li= number_to_currency contest.enrtry_fee
-  li= number_to_currency contest.prize
-  li= contest.entries.size
-  li= link_to 'enter', new_contest_entry_path(contest), class: 'button'
+  td= content_livein_countdown contest
+  td data-value=contest.entry_fee
+    = contest_entry_fee contest
+  td data-value=contest.prize
+    = number_to_currency contest.prize
+  td= contest.entries.size
+  td= link_to 'enter', new_contest_entry_path(contest), class: 'enter-contest'
