--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -64,10 +64,10 @@
 <table class='contestHead table sortable'>
   <thead>
     <tr>
-      <th data-defaultsort="asc">CONTEST</th>
-      <th data-defaultsort="asc">SPORT</th>
-      <th data-defaultsort="asc">LIVE IN</th>
-      <th data-defaultsort="asc">ENTRY</th>
+      <th data-defaultsort="asc" class="srt-contest-name">CONTEST</th>
+      <th data-defaultsort="asc" class="srt-sport">SPORT</th>
+      <th data-defaultsort="asc" class="srt-live-in">LIVE IN</th>
+      <th data-defaultsort="asc" class="srt-entry-fee">ENTRY</th>
       <th data-defaultsort="asc">PRIZE</th>
       <th data-defaultsort="asc">ENTRIES</th>
       <th data-defaultsort="disabled"></th>
