Fix contest spec and clean up some code.

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -187,7 +187,7 @@
     </tr>
     </tbody>
   </table>
-  <p class='green'>Clear »</p>
+    <%= link_to 'Clear »', '#_', class: 'clear-lineups green' %>
 </div>
 
 <div class='clear'> &nbsp;</div>
