Add new factories. Ability to clear lineup. Add first and last name to user + specs for validation. Add views for lineup.

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -227,3 +227,9 @@ table.tab tbody tr {
   font-size: 40px;
   padding: 10px 25px;
 }
+a#clear-lineups{
+
+  &:focus, &:hover{
+    text-decoration: none;
+  }
+}
