remove player from pool when selected for lineup

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -80,16 +80,16 @@
                   <strong> <%= position.name %> </strong>
                     <span>&nbsp;</span>
                 </td>
-                <td>
+                <td class='player'>
                   <span class='green'><%= player.name %> </span>
                 </td>
-                <td>
+                <td class='opp'>
                   <span>Ind@SDD</span>
                 </td>
-                <td>
+                <td class='salary'>
                   <span>$8,500</span>
                 </td>
-                <td>24.5</td>
+                <td class='fppg'>24.5</td>
                 <td><%= link_to '+', '#_', class: 'add-to-lineup' %> </td>
               <% end %>
             <% end %>
