--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -162,6 +162,7 @@
           <th>OPP</th>
           <th>SALARY</th>
           <th>FPPG</th>
+          <th>&nbsp;</th>
         </tr>
         </thead>
         <tbody>
@@ -173,18 +174,19 @@
                 <%= lineup_form.hidden_field :sport_position_id %>
               </td>
               <td class='player val'>
-                <span></span>
                 <%= lineup_form.hidden_field :player_id %>
               </td>
               <td class='opp val'></td>
               <td class='salary val'></td>
               <td class='fppg val'></td>
+              <td><%= link_to 'x', '#_', class: 'remove-from-lineup', data: {position: position.name} %> </td>
             </tr>
         <% end %>
         <tr>
           <td>
             <strong>ALL</strong>
           </td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
