Swapped lineup with entry.. still needs more work. DO NOT revert entries.js.coffee changes-> setting player_id to hidden fields when user clicks on Add Player... We need to cater to some edge cases but for a successful scenario this works for now.

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,10 +1,6 @@
 <div class="lineups">
-<!--Welcome Note-->
 <div class="welcomeNote">Enter the Game of your choice, then Select your Lineup and Win Cash.</div>
-<!--/Welcome Note-->
-<!---Line Ups--->
 <h2>MY LINEUPS</h2>
-<!---Filter--->
 <div class="filter_row">
   <div class="row">
     <div class="col-md-4">
@@ -81,8 +77,8 @@
   <div class="gridbox upcoming">
     <!---Box Header-->
     <header>
-      <div class="leftside"><img src="/assets/sports/nfl.png" alt=""/><strong>NFL</strong></div>
-      <div class="rightside"><strong>UPCOMING</strong>: 52:34:46</div>
+      <div class="pull-left"><img src="/assets/sports/nfl.png" alt=""/><strong>NFL</strong></div>
+      <div class="pull-right"><strong>UPCOMING</strong>: 52:34:46</div>
     </header>
     <ul class="summary">
       <li># of Entries</li>
