--- a/app/views/contests/_contest.html.erb
+++ b/app/views/contests/_contest.html.erb
@@ -11,8 +11,8 @@
   <td data-value=<%= contest.prize %>>
     <%= number_to_currency contest.prize %>
   </td>
-  <td><%= contest.entries.size %></td>
+  <td><%= contest.lineups.size %></td>
   <td>
-    <%= link_to 'enter', new_contest_entry_path(contest), class: 'enter-contest'%>
+    <%= link_to 'enter', new_contest_lineup_path(contest), class: 'enter-contest'%>
   </td>
 </tr>
