--- a/app/views/lineups/_lineup_player.html.erb
+++ b/app/views/lineups/_lineup_player.html.erb
@@ -1,7 +1,8 @@
 <%= content_tag :tr, id: dom_id(player), class: 'contest-player', data: {player_id: player.id, player_name: player.name, player_salary: player.salary, player_opp: 'Ind@SDD', player_fppg: 24.5, player_position: player.sport_position.name} do %>
     <td>
-      <strong> <%= player.sport_position.name %> </strong>
-      <span>&nbsp;</span>
+      <span>
+        <strong> <%= player.sport_position.name %> </strong>
+      </span>
     </td>
     <td class='player'>
       <span class='green'><%= player.name %> </span>
@@ -12,6 +13,8 @@
     <td class='salary'>
       <span data-salary=<%= player.salary %>> <%= number_to_currency player.salary %></span>
     </td>
-    <td class='fppg'>24.5</td>
+    <td class='fppg'>
+      <span>24.5</span>
+    </td>
     <td><%= link_to '+', '#_', class: 'add-to-lineup' %> </td>
 <% end %>
