add sports to filter dropdown

--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -36,7 +36,9 @@
               <b class='downarrowblack'>&nbsp;</b>
             </a>
             <ul class='dropdown-menu'>
-              <li>Content Area</li>
+              <li><a href="#">CBB</a></li>
+              <li><a href="#">NBA</a></li>
+              <li><a href="#">NHL</a></li>
             </ul>
           </li>
         </ul>
