Fix currency format, height of player pool and confirm user before clearing lineup.

--- a/app/assets/stylesheets/lineups.css.scss
+++ b/app/assets/stylesheets/lineups.css.scss
@@ -875,3 +875,6 @@ div.footerContainer ul.right li {
   margin-top: 0 !important;
   padding-top: 3px !important;
 }
+.same-height{
+  overflow-y: scroll;
+}
