--- a/app/views/lineups/_lineup_player.html.erb
+++ b/app/views/lineups/_lineup_player.html.erb
@@ -11,7 +11,7 @@
       <span>Ind@SDD</span>
     </td>
     <td class='salary'>
-      <span data-salary=<%= player.salary %>> <%= number_to_currency player.salary %></span>
+      <span data-salary=<%= player.salary %>> <%= number_to_currency player.salary, precision: 0 %></span>
     </td>
     <td class='fppg'>
       <span>24.5</span>
